# sark

./: Cargo.toml  README.md
examples/: minimal_api.rs
src/: app.rs  error.rs  lib.rs  server.rs
src/http/: mod.rs  request.rs  response.rs
src/service/: handler.rs  mod.rs  router.rs
tests/: http_test.rs  minimal_tests.rs
