[package]
name = "sark"
version = "0.1.0"
edition = "2024"
description = "Simple Asynchronous Rust webKit"
authors = ["SARK Team"]
repository = "https://github.com/sark/sark"
license = "MIT"

[[example]]
name = "minimal_api"
path = "examples/minimal_api.rs"

[lib]
name = "sark"
path = "src/lib.rs"

[dependencies]
# async-trait removed - using native AFIT
bytes = "1.5.0"
futures = "0.3.30"
http = "1.0.0"
monoio = { version = "0.2.2", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7"
thiserror = "1.0.57"
httparse = "1.8.0"
num_cpus = "1.16.0"
core_affinity = "0.8.0"
percent-encoding = "2.3.0"
tracing = "0.1"
# once_cell removed - no longer using static handlers
